fixed figure overflow and caption position

--- a/site/dev/sass/uband.scss
+++ b/site/dev/sass/uband.scss
@@ -29,6 +29,7 @@ $font-alt: -apple-system, BlinkMacSystemFont,
 $color-black: #222;
 
 $width-max: 1400px;
+$width-margin-mobile: $double;
 $width-margin-desktop: $grid * 5;
 $width-inner-bounded: $grid * 60;
 $width-outer-column: $grid * 22;
@@ -42,7 +43,8 @@ $ui-close-large: 34px;
 $ui-close-small: 26px;
 
 $time-long: 300s;
-$color-trans-whispergray: rgba(0,0,0,.02);
+$time-short: 60s;
+$color-trans-whispergray: rgba(0,0,0,.01);
 
 // - - - - - - -
 
@@ -59,6 +61,11 @@ $color-trans-whispergray: rgba(0,0,0,.02);
 @keyframes ani-clearOut {
     from {color: $color-black;}
     to {color: rgba(0,0,0,0);}
+}
+
+@keyframes ani-commentsBg {
+    from {background-color: $color-trans-whispergray;}
+    to {background-color: #dbe6d5;}
 }
 
 
@@ -308,19 +315,28 @@ figure img {
 }
 
 .container {
-	margin: $grid * 6 auto;
+	margin: $grid * 6 $grid * -1 $grid * 6 0;
+	overflow: hidden;
+	@include respond-r3 {
+		margin: $grid * 6 auto;
+	}
 	h3.figure-title {
 		margin-top: 0;
 		margin-bottom: $grid * 3;
 	}
 	.row {
-		margin: 0 ($width-margin-desktop / -2);
+		margin: 0 ($width-margin-mobile / -2);
 		overflow: auto;
+		@include respond-r3 {
+			margin: 0 ($width-margin-desktop / -2);
+		}
 	}
-	overflow: auto;
 	figure {
-		padding: 0 $width-margin-desktop / 2;
+		padding: 0 $width-margin-mobile / 2;
 		float: left;
+		@include respond-r3 {
+			padding: 0 ($width-margin-desktop / 2);
+		}
 	}
 	.single figure { width: 100%; }
 	.two-across figure { width: 50%; }
@@ -336,14 +352,20 @@ figure img {
 		line-height: 1.4;
 		padding-bottom: .2em;
 	}
-	p.common-caption { @extend .inner-bounded; }
+	p.common-caption { 
+		@extend .inner-bounded; 
+		padding: $grid * 2 ($width-margin-mobile / 2) 0;
+		@include respond-r3 {
+			padding: $grid * 2 ($width-margin-desktop / 2) 0;
+		}
+	}
 }
 
 div.comments {
-	background-color: $color-trans-whispergray;
 	padding: $grid * 3 $double $grid * 7;
 	margin: $grid * 7 $grid * -3 0 $grid * -2;
 	width: auto;
+	animation: ani-commentsBg ease-in-out 5s infinite alternate;
 	@include respond-r3 {
 		margin: $grid * 8 $grid * -5 0 $grid * -5;
 		padding: $grid * 8 $grid * 5 $grid * 8;
